# vlm-htr

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: htr_conf.yaml
logs_uppmax/: htrflow.err
requirements/: htrflow.txt  vlm.txt
slurm/: convert_checkpoints.sh  create_hovratt_line_dataset.sh  create_hovratt_region_dataset.sh  create_hovratt_text_recog.sh  create_line_dataset.sh  create_polis_region_dataset.sh  create_polis_text_recog.sh  create_region_dataset.sh  create_text_recog_polis.sh  eval__florence_htr_line__hovratt_line.sh  eval__florence_htr_line__hovratt_region.sh  eval__florence_htr_line__polis_line.sh  eval__florence_htr_line__polis_region.sh  eval__florence_htr_region__hovratt_line.sh  eval__florence_htr_region__hovratt_region.sh  eval__florence_htr_region__polis_line.sh  eval__florence_htr_region__polis_region.sh  evaluate_florence_htr_line.sh  evaluate_florence_htr_region_polis_line.sh  finetune__florence_htr_line.sh  finetune__florence_htr_region.sh  finetune__gpt2.sh  finetune__trocr.sh  finetune_florence_2.py.sh  finetune_florence_hovratt_htr.sh  finetune_florence_htr_line.sh  finetune_florence_htr_line_1d.sh  finetune_florence_htr_page.sh  finetune_florence_htr_region.sh  finetune_florence_htr_region_1d.sh  finetune_florence_vqa.sh  run_htrflow.sh  submit.sh  submit_jobs.sh
src/: data_types.py  file_tools.py  htr_tools.py  logger.py  post_process.py  train.py  utils.py  visualization.py
workpad/: convert_checkpoints.py  count_line_samples.py  create_chunk_dataset.py  create_hovratt_text_recog.py  create_line_dataset.py  (+23 more)
(+488 files in other folders)
